--- a/index.html
+++ b/index.html
@@ -1,88 +1,145 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Forward!</title>
-     <!-- <link href="styles.css" rel="stylesheet"/> -->
-     <!-- <script src="frompaste.js" defer></script> -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap 5.3.2 -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd" crossorigin="anonymous">
+
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+    <link href="bootstrap.min.css" rel="stylesheet">
+    <title>S2T</title>
+
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
+    <!-- <style> -->
+    <!-- input::before{ -->
+    <!--   content:attr() -->
+    <!-- } -->
+    <!--  -->
+    <!-- </style> -->
 </head>
 <body>
 
-    <!-- <div id="grid">  -->
-    <!--     <div id="imageContainer" contenteditable="True"></div> -->
-    <!--     <div id="result"></div> -->
-    <!-- </div> -->
+  <div class="card border-primary mb-3 container-sm text-center fs-2" >
 
-    <form method="POST" id="forward">
-      <input  type="text" name="firstname"/>
-      <button type="submit">Confirm</button>
+  <div class="card-header">
+    Speech To Text Converter
+  </div >
+
+  <div class="card-body">
+    <form 
+      id="stt_form"
+      enctype="multipart/form-data"
+      method="POST"
+      action="http://localhost:3000/stt" >
+
+      <div class="mb-3">
+
+        <label for="sendfile" class="form-label">
+         <i class="bi bi-plus-circle"></i> Select/drag & drop 
+        </label>      
+
+        <input
+          type="file" 
+          name="sendfile"
+          class="form-control"
+          accept=".mp3, .mp4, .mpweg, .mpga, .m4a, .wav, .webm"
+          required
+        />
+
+        <!-- <small class="form-text text-muted">  -->
+        <!--      .mp3 <i class="bi bi-music-note-beamed"></i>| -->
+        <!--      .mpga<i class="bi bi-music-note-beamed"></i>|  -->
+        <!--      .wav<i class="bi bi-music-note-beamed"></i>| -->
+        <!--      .mp4<i class="bi bi-camera-video"></i>| -->
+        <!--      .m4a<i class="bi bi-camera-video"></i>| -->
+        <!--      .mpweg<i class="bi bi-camera-video"></i>| -->
+        <!--      .webm<i class="bi bi-camera-video"></i> -->
+        <!-- </small> -->
+
+
+        <!-- <small class="form-text text-muted">  -->
+        <!--      <i class="bi bi-music-note-beamed"></i> .mp3  -->
+        <!--       .mpga  -->
+        <!--       .wav | -->
+        <!--      <i class="bi bi-camera-video-fill"></i> .mp4  -->
+        <!--       .mpweg  -->
+        <!--       .m4a  -->
+        <!--       .webm -->
+        <!-- </small> -->
+
+
+        <!-- <small class="form-text text-muted">  -->
+        <!--     .mp3  -->
+        <!--       <span class="badge bg-primary"><i class="bi bi-music-note-beamed"></i>.mpga </span> -->
+        <!--     .wav | -->
+        <!--    <i class="bi bi-camera-video-fill"></i> .mp4  -->
+        <!--     .mpweg  -->
+        <!--     .m4a  -->
+        <!--     .webm -->
+        <!-- </small> -->
+
+        <small class="form-text text-muted"> 
+            <span class="badge bg-primary"> <i class="bi bi-music-note-beamed"></i> .mp3    </span>
+            <span class="badge bg-light">   <i class="bi bi-music-note-beamed"></i> .mpga   </span> 
+            <span class="badge bg-success"> <i class="bi bi-music-note-beamed"></i> .wav    </span>
+            <span class="badge bg-danger">  <i class="bi bi-camera-video"></i>      .mp4    </span>
+            <span class="badge bg-warning"> <i class="bi bi-camera-video"></i>      .m4a    </span>
+            <span class="badge bg-info">    <i class="bi bi-camera-video"></i>      .mpweg  </span>
+            <span class="badge bg-dark">    <i class="bi bi-camera-video"></i>      .webm   </span>
+        </small>
+
+
+      </div>
+
+      <button type="submit" class="btn btn-primary btn-lg fs-1">
+        <i class="bi bi-file-earmark-music"></i><i class="bi bi-arrow-right-short"></i><i class="bi bi-file-text"></i>
+      </button>
     </form>
+  </div>
+  </div>
+
+  <!--     <div class="custom-file"> -->
+  <!--   <input type="file" class="custom-file-input" id="customFile" hidden> -->
+  <!--   <label class="custom-file-label" for="customFile"> -->
+  <!--     <i class="bi bi-folder"></i> Browse... -->
+  <!--   </label> -->
+  <!-- </div> -->
 
 
-
-
-
-<script>
-  
-const form = document.getElementById("forward");
-
-async function  fwrd(e){
-  e.preventDefault()
-  // requestSubmit
-  try{
-  await fetch('http://localhost:3000/upload', {
-        method: 'POST',
-        body: new URLSearchParams({firstname: e.target.firstname.value}),
-        headers: {"Content-Type":"application/x-www-form-urlencoded"} // Important: Omit 'Content-Type' header to let Spring handle it
-      // await fetch(hostedFrom+'/roster', {method: "POST", headers: {"Content-Type":"application/x-www-form-urlencoded"}, body: new URLSearchParams(state.userInput)})
-
-    });
-  }
-  catch(err){console.error(err)}
-}
-
-form.addEventListener("submit", fwrd)
-// const imageContainer = document.getElementById('imageContainer');
-// const resultDiv      = document.getElementById('result');
-
-
-// imageContainer.addEventListener('paste', async (event) => {
-//   resultDiv.innerText = "Please wait..."
-//   const item     = event.clipboardData.items[0];
-//   if (event.clipboardData.items[0].type.indexOf('image') == -1) {
-//       resultDiv.innerText = 'Not an image!'
-//       return
-//       }
-//   try
-//       {
-//           const blob     = item.getAsFile();
-//
-//           const formData = new FormData();
-//           formData.append('file', blob);
-//
-//           const response = await fetch('/upload', {
-//               method: 'POST',
-//               body: formData,
-//               headers: {}, // Important: Omit 'Content-Type' header to let Spring handle it
-//           });
-//
-//           if (response.ok) {
-//               const text = await response.text();
-//               resultDiv.innerText = text;
-//           } else {
-//               resultDiv.innerText = 'Error uploading the file.';
-//           }
-//       }
-//   catch (error)
-//       {
-//           resultDiv.innerText = 'An error occurred: ' + error.message;
-//       }
-//   });
-
-
-
-
-
-    </script>
+<!-- Approach below uses fetch API instead  -->
+<!-- <script> -->
+<!--    -->
+<!--   const stt_form = document.getElementById("stt_form"); -->
+<!---->
+<!--   async function sendFile(e){ -->
+<!--     e.preventDefault() -->
+<!--     try{ -->
+<!---->
+<!--       const item = e.target.sendfile.files[0] -->
+<!--       console.log(item) -->
+<!--       const fd = new FormData() -->
+<!--        -->
+<!--       fd.append('sendfile', item) -->
+<!--        -->
+<!--      await fetch('http://localhost:3000/sendfile', { -->
+<!--         method: 'POST', -->
+<!--         body: fd, -->
+<!--         headers: {},  -->
+<!--     }); -->
+<!---->
+<!--     }catch(err){ -->
+<!--       console.error(err) -->
+<!--     } -->
+<!--   } -->
+<!---->
+<!--   stt_form.addEventListener("submit", sendFile) -->
+<!---->
+<!-- </script> -->
 
 </body>
 </html>
